[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://PauseWindow.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/pcsenior16.tres" type="DynamicFont" id=3]

[node name="PauseWindow" type="Panel"]

pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -64.0
margin_right = 94.0
margin_bottom = 64.0
rect_min_size = Vector2( 192, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "Rect", "Theme" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="PauseLabel" type="Label" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Paused"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 128.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ResumeButton" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="LabelTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="IgnoreInputTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[connection signal="visibility_changed" from="." to="." method="_on_PauseWindow_visibility_changed"]

[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]

[connection signal="focus_exited" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_focus_exited"]

[connection signal="timeout" from="LabelTimer" to="." method="_on_Timer_timeout"]


